# sql2rss

./: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  main.ml  rss.ml  sql.ml  sql2rss.opam  storage.ml
.github/workflows/: ci.yml
src/: dateutil.ml  dune  main.ml  rss.ml  sql.ml
